# 2023-scipy-pandas

./: idiomatic-pandas.ipynb  pyproject.toml
