[tool.poetry]
name = "2023-scipy-pandas"
version = "0.1.0"
description = ""
authors = ["B. J. Potter <bj.ctr.potter@faa.gov>"]
readme = "README.md"
packages = [{include = "2023_scipy_pandas"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "2.0.2"
pyarrow = "12.0.0"
jupyter = "^1.0.0"
ipython = "^8.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
